Fix schedule share bar to not wrap on small widths
During our CUSEC demo, I noticed that the "export" button overflowed to the next
line. In fact this starts happening on any screen widths < 1300px.

This fixes that, and also gets the link input to stretch to take up all
available space. Also refactors the CSS/HTML to get gutter widths to be more
consistent and have only one (well, two) occurrence of that width.

--- a/server/static/sass/_schedule.scss
+++ b/server/static/sass/_schedule.scss
@@ -262,27 +262,32 @@ $toolbarBg: #FAFAFA;
   border-top: 1px solid $wellBorderColor;
   @include border-radius(0 0 4px 4px);
 
+  .form-inline {
+    display: table;
+
+    > .cell {
+      display: table-cell;
+      white-space: nowrap;
+      padding-left: 10px;
+
+      &:first-child {
+        padding-left: 0;
+      }
+    }
+  }
+
   .share-label {
-    padding-left: 6px;
-    padding-right: 6px;
+    vertical-align: middle;
+    margin: auto;
+  }
+
+  .link-box-container {
+    width: 100%;
   }
 
   .link-box {
-    // TODO(david): Stretch box to take up more horizontal space if available
-    width: 270px;
-  }
-
-  .print-schedule-btn {
-    float: right;
-    margin-left: 10px;
-  }
-
-  .reimport-btn {
-    float: right;
-    margin-left: 10px;
-  }
-
-  .export-btn-group {
-    float: right;
+    width: 100%;
+    @include box-sizing(border-box);
+    height: 31px;
   }
 }
